src/styles/styles.css
/* ... */
.page-9-header {
  container-type: inline-size;
  height: 59.5cqw;
  line-height:1
}

.page-9-title {
  margin-top:9cqw;
  padding-top: 0;
  font-family: "Ekaterina Velikaya One", serif;
  font-size: 14cqw;
  font-weight: 400;
  line-height: 0.88;
  letter-spacing: 0;
  color: #050505;
  position:relative;
  z-index:2
}

.page-9-visual {
  position: relative;
  z-index: 1;
  margin: -3.3% 0 0;
  width: 100cqw;
  height: 41cqw;
  overflow: hidden;

}

.page-9-main-image {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
  object-position: center;
}

.page-9-copy-grid {
  display: grid;
  top:2.7cqw;
  padding-inline: 0.37037%;
  height:37.7cqw;
  align-items: start;
  grid-template-rows: 9cqw 16.9cqw auto;
  grid-template-columns: auto 19.7cqw auto;
  container-type: inline-size;
}

.page-9-copy {
  font-family: "Montserrat", sans-serif;
  color: #1c1c1c;
}

.page-9-copy p {
  margin: 0;
  font-weight: 400;
  line-height: 1.14;
  letter-spacing: -0.02em;
}

.page-9-copy-left-top {
  grid-column: 1;
  grid-row: 1;
  width: 20cqw;
  height:6.2cqw;
  font-size:1.5cqw
}

.page-9-copy-right {
  grid-column: 3;
  grid-row: 2;
  align-self: start;
  width:53cqw;
  height:12cqw;
}

.page-9-subtitle {
  left: 48.148148%;
  font-family: "Ekaterina Velikaya One", serif;
  font-size: 4.65cqw;
  font-weight: 400;
  line-height: 0.9;
  color: #050505;
}

.page-9-copy-right-body {
  max-width: 49.8cqw;
  height:13.5cqw;
  font-size:1.9cqw;
  padding-left:4cqw
}

.page-9-copy-left-bottom {
  grid-column: 1;
  grid-row: 3;
  width:25.8cqw;
  align-self: start;
  font-size:1.5cqw;
}

/* ----------------- Page 10 ----------------- */

.page-10-kicker,
.page-10-title,
.page-10-meta,
.page-10-number {
  margin: 0;
  font-family: "Montserrat", sans-serif;
  color: #121212;
}

.page-10-kicker {
  position: absolute;
  top: 4.62963%;
  left: 3.240741%;
  font-size: 2.3cqw;
  font-weight: 300;
  line-height: 1;
  letter-spacing: 0.01em;
  color: #8e8e8e;
}

.page-10-header {
  position: absolute;
  top: 12.5%;
  left: 3.240741%;
  width: 67.407407%;
  container-type: inline-size;
}

.page-10-title {
  font-weight: 600;
  line-height: 1.16;
  letter-spacing: -0.03em;
  font-size: 4.8cqw;
}

.page-10-number {
  position: absolute;
  top: 5.416667%;
  right: 2.314815%;
  width: 16.111111%;
  height: 26.388889%;
  background: #000;
  clip-path: polygon(27% 0, 84% 0, 84% 100%, 20% 100%, 20% 23%, 0 28%, 0 7%);
}

.page-10-number::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 66%;
  height: 30%;
  background: #000;
  clip-path: polygon(0 34%, 66% 0, 100% 0, 100% 100%, 0 100%);
}

.page-10-meta {
  position: absolute;
  left: 3.240741%;
  right: 3.240741%;
  top: 34.62963%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 1.2cqw;
  font-weight: 300;
  line-height: 1;
  letter-spacing: 0;
  height:1.5cqw;
  color: #8e8e8e;
}

.page-10-image-frame {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 1.851944%;
  height: 61.111111%;
  padding: 1.851944%;
}

.page-10-image {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
}

